styles/style.css
/* ... */
footer {
	background-color: #a57bb0;
	color: white;
	font-size: 0.8em;
	padding-top: 3rem;
    padding-bottom: 4rem;
}

textarea { 
	resize: block;
	height: 10em;
}

input {
    width: 100%;
}


a {
	text-decoration: none;
	border-bottom: 1px solid #1d7484;
	color: #1d7484;
}
a:visited {
	color: #1d7484;
}
a:hover {
	color: #982c61;
	border-bottom: 2px solid #982c61;
}

[v-cloak] {
	display: none !important;
}

/* edit chota-grid variables */
:root {
	--grid-maxWidth: 75rem;
	--grid-gutter: 1.25rem;
}

/* edit vue-select variables */
:root {
	--vs-font-size: 1em;
}

.section-event-display {
	width: auto;
	max-width: calc(min(100svh, 42rem));
	container-type: inline-size;
	margin-inline: auto;
}
.event-display {
	container-type: size;
	width: calc(min(100cqw, 100svh, 42rem));
	height: calc(min(100cqw, 100svh, 42rem) * 0.9);
	margin-inline: auto;
	display: grid;
	justify-items: center;
	align-items: end;
}
.event-square {
	container-type: size;
	grid-row: 1 / 2;
	grid-column: 1 / 2;
	width: 80%;
	aspect-ratio: 1;
	border: 0.4cqw solid #777777;
	display: flex;
	flex-direction: column;
	flex-wrap: nowrap;
	justify-content: center;
	align-items: center;
	padding: 3%;
	background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
	box-shadow:
		0 0.2cqw 0.2cqw hsl(0deg 0% 0% / 0.08),
		0 0.4cqw 0.4cqw hsl(0deg 0% 0% / 0.08),
		0 0.8cqw 0.8cqw hsl(0deg 0% 0% / 0.08),
		0 1.6cqw 1.6cqw hsl(0deg 0% 0% / 0.08),
		0 2.0cqw 3.2cqw hsl(0deg 0% 0% / 0.1),
		0 4.0cqw 6.4cqw hsl(0deg 0% 0% / 0.1),
		0 6.0cqw 12.8cqw hsl(0deg 0% 0% / 0.1),
		0 8.0cqw 25.6cqw hsl(0deg 0% 0% / 0.15);
}
.event-square > * {
	display: flex;
	justify-content: center;
	align-items: center;
	gap: 1cqw;
	flex-wrap: nowrap;
	font-size: 3.7cqw;
}
.event-square .title h1 {
	margin: 2cqh 0 3cqh 0;
	font-family: inherit;
}
.event-square .date-and-time {
	
}
.event-square .timezone {
	font-size: 3cqw;
}
.event-square .rsvp {
	
}
.event-square .description {
	flex-grow: 1;
}
.event-square .description div {
	white-space: pre-wrap;
	text-align: center;
}

.section-image-credit {
    width: 100%;
	max-width: calc(min(100svh, 42rem));
    margin-inline: auto;
	display: flex;
	flex-flow: column nowrap;
	align-items: center;
	justify-content: center;
}
.section-image-credit div {
	width: 80%;
	text-transform: uppercase;
    font-weight: bold;
    font-size: 0.6rem;
    text-align: right;
    font-style: italic;
}

:root {
	--cal-scale: 1;
}
.calendar-buttons-display {
	display: grid;
	justify-items: center;
	align-items: center;
	justify-content: center;
}
.calendar-buttons {
	display: flex;
	flex-flow: column nowrap;
	font-size: calc(1rem * var(--cal-scale));
	gap: 0.5em;
	align-items: center;
	justify-content: center;
	margin-block-start: 2.5rem;
    margin-block-end: 2.5rem;
}

@media screen and (max-width: 35rem) {
	.event-display {
		width: calc(min(100cqw, 100svh, 42rem));
		height: calc(min(100cqw, 100svh, 42rem));
	}
	.event-square {
		width: 100%;
	}
	:root {
		--cal-scale: 0.7;
	}
	.section-image-credit div {
		width: 97%;
	}
}

.calendar-buttons-heading {
	text-transform: uppercase;
	font-size: 1em;
	font-weight: bold;
}
.calendar-buttons-list {
	display: flex;
	flex-flow: row wrap;
	align-items: center;
	justify-content: center;
	row-gap: 1em;
	column-gap: 1.8em;
}
.calendar-button {
	background-color: white;
	border-radius: 5em;
	font-size: 1.2em;
	padding: 0.5em 1.1em 0.6em 1.1em;
	color: #4a4a4a;
	white-space: nowrap;
    word-break: keep-all;
    text-wrap: nowrap;
    text-wrap-mode: nowrap;
	box-shadow:
		0 0.1em 0.2em hsl(0deg 0% 0% / 0.1),
		0 0.3em 0.4em hsl(0deg 0% 0% / 0.1),
		0 0.4em 0.8em hsl(0deg 0% 0% / 0.1),
		0 1.0em 1.6em hsl(0deg 0% 0% / 0.1);
}
.calendar-button:visited {
	color: #4a4a4a;
}
.calendar-button:hover {
	color: #a57bb0;
	border-bottom: none;
	box-shadow:
		0 0.1em 0.2em hsl(0deg 0% 0% / 0.1),
		0 0.3em 0.4em hsl(0deg 0% 0% / 0.1),
		0 0.4em 0.8em hsl(0deg 0% 0% / 0.1),
		0 1.0em 1.6em hsl(0deg 0% 0% / 0.1),
		0 2.0em 3.2em hsl(0deg 0% 0% / 0.15);
}

.section-heading {
	line-height: 1;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
	font-weight: 700;
	margin-top: 0.25rem;
	margin-bottom: 0.25rem;
	overflow-wrap: break-word;
	word-wrap: break-word;
	-ms-word-break: break-all;
	word-break: break-word;
	font-size: 2rem;
}

.section-collapsible {
	display: grid;
	column-gap: 0.8rem;
	row-gap: 1rem;
	grid-template-columns: max-content min-content 1fr;
	grid-template-areas:
	    "heading toggle empty"
	    "collapse collapse collapse";
	margin-top: 2rem;
}
.section-collapsible .section-heading {
	grid-area: heading;
}
.section-collapsible .section-heading-toggle {
	/* hide the original checkbox (the label is shown instead). don't use "display: none" or
	 * "visibility: hidden" as those also make it get skipped when tabbing with a keyboard */
    grid-area: toggle;
    height: 10px;
    width: 10px;
    opacity: 0;
}
.section-collapsible .section-heading-toggle-label {
	grid-area: toggle;
	width: 2.5rem;
	min-width: 2.5rem;
	max-width: 2.5rem;
}
.section-collapsible .section-collapse {
	grid-area: collapse;
	height: 0;
	overflow: clip;
	transition: height 0.25s ease-in-out;
}
.section-collapsible .section-heading-toggle-label svg {
	height: 1.3em;
    width: 1.3em;
	transition: transform 0.25s ease-out;
}
.section-collapsible .section-heading-toggle:checked + .section-heading-toggle-label + .section-collapse {
	/* expand the collapsible area whenever the checkbox is ticked */
	height: auto;
}
.section-collapsible .section-heading-toggle:checked + .section-heading-toggle-label svg {
	/* rotate the arrow icon whenever the checkbox is ticked */
	transform: rotate(0.25turn);
}
.section-collapsible .section-heading-toggle:focus-visible + .section-heading-toggle-label {
	/* outline the label whenever anyone tabs to the original checkbox */
	border: 1px solid #1d7484;
    outline: 0;
}
/* ... */

